force-app/main/default/objects/leaseworks__Monthly_Scenario__c/leaseworks__Monthly_Scenario__c.object-meta.xml
<CustomObject>
    <label>Fx Monthly Output</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fx Monthly Output</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>