force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Acc_MR_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Acc_MR_F__c</fullName>
    <formula>if( !isblank(leaseworks__Net_MR__c)
,if($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__CustType__c==&#39;AIRLINE&#39;, 1 , 1)  
*  leaseworks__Net_MR__c
,null)</formula>
    <label>Acc. MR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>