force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__AVG_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AVG_FC__c</fullName>
    <formula>leaseworks__Total_FC_Cumulative__c / leaseworks__No_Operational_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>