force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Current_Rate_Escalated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rate_Escalated__c</fullName>
    <description>Base Rate * Escalation</description>
    <label>Current Rate Escalated</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>