force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Effective_Escalation_Factor_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Escalation_Factor_MR__c</fullName>
    <label>Effective_Escalation_Factor_MR</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>