force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Eola_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eola_Amount__c</fullName>
    <label>Eola Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>