force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Eola_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eola_F__c</fullName>
    <formula>if($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__CustType__c==&#39;AIRLINE&#39;, -1 , 1) 
* leaseworks__Eola_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eola</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>