force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Event_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Date__c</fullName>
    <label>Event Date Start</label>
    <type>Date</type>
</CustomField>