force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__FHFC_Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FHFC_Lower_Limit__c</fullName>
    <label>FHFC_Lower_Limit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>