force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hours_Remaining__c</fullName>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>