force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Is_MR_greater_than_EOLA__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_MR_greater_than_EOLA__c</fullName>
    <formula>IF( leaseworks__MR_At_Return__c &gt;  leaseworks__Eola_Amount__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is MR greater than EOLA?</label>
    <type>Checkbox</type>
</CustomField>