force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Last_Event_Date_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Event_Date_End__c</fullName>
    <label>Last Event Date End</label>
    <type>Date</type>
</CustomField>