force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Lease_Extension_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Extension_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Extension Month?</label>
    <type>Checkbox</type>
</CustomField>