force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__LLP_Cost__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LLP_Cost__c</fullName>
    <description>LLP Cost for this month</description>
    <label>LLP Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>