force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Lowest_Limiter_LLP_Comp__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lowest_Limiter_LLP_Comp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lowest Limiter LLP Comp</label>
    <referenceTo>leaseworks__Scenario_Component__c</referenceTo>
    <relationshipLabel>Fx Monthly Output (Lowest Limiter LLP Comp)</relationshipLabel>
    <relationshipName>Fx_Monthly_Output</relationshipName>
    <type>Lookup</type>
</CustomField>