force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Month_Since_Next_Overhaul_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Month_Since_Next_Overhaul_F__c</fullName>
    <formula>if(leaseworks__Month_Since_Next_Event__c&lt;0,null,leaseworks__Month_Since_Next_Event__c)</formula>
    <label>Month Since Next Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>