force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__MR_At_Return__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_At_Return__c</fullName>
    <formula>leaseworks__MR_at_Return_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR At Return</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>