force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__MR_at_Return_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_at_Return_Month__c</fullName>
    <label>_MR at Return Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>