force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__MR_OR_EOLA_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_OR_EOLA_Amount__c</fullName>
    <formula>if( leaseworks__Reserve_Type__c== &#39;EOLA&#39;,  leaseworks__Eola_F__c , leaseworks__MR_F__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR OR EOLA Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>