force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__PR_Cost_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PR_Cost_F__c</fullName>
    <formula>if( !isblank(leaseworks__Event_Expense_Amount__c)
,if($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__CustType__c==&apos;AIRLINE&apos;, -1 , 1)  
 *  leaseworks__Event_Expense_Amount__c
,null)</formula>
    <label>PR Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>