force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Ratio_Since_last_PR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Since_last_PR__c</fullName>
    <formula>leaseworks__TSO__c / leaseworks__CSO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio - Since last PR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>