force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Reserve_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reserve_Type__c</fullName>
    <label>Reserve Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>