force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Return_Condition_Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Return_Condition_Comments__c</fullName>
    <label>Return Condition Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>