force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Shortfall_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Shortfall_FH__c</fullName>
    <label>Shortfall FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>