force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Threshold_Amount__c</fullName>
    <label>Threshold_Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>