force-app/main/default/objects/leaseworks__Monthly_Scenario__c/fields/leaseworks__Threshold_Units__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Threshold_Units__c</fullName>
    <label>Threshold_Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>